--- a/frontend/blocknotes-frontend/src/App.css
+++ b/frontend/blocknotes-frontend/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: "Orbitron", sans-serif;
+  overflow-x: hidden;
+  background: #0a0c1d;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-root {
+  position: relative;
+  z-index: 1;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.MuiPaper-root {
+  margin: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.MuiTypography-h1, .MuiTypography-h2 {
+  text-shadow: 0 0 15px rgba(142, 45, 226, 0.6);
 }
